--- a/Frame/Layout/2_Intro/BFASH/fashalongintro.html
+++ b/Frame/Layout/2_Intro/BFASH/fashalongintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro"> 
         <h2 id="fashaudiI" class="section-heading">FashAlongs</h2>
-        <span class="icon9add icon9-equalizer" style="font-size: 60px"></span>
-        <p class="text-light">Individual audio projects for<br> tutorials, soundtrack, parody, and other audio-related setups.</p></section></div>  
+        <span class="icon9add icon9-equalizer" style="font-size: 60px">&nbsp;</span>
+        <p class="text-light">Audio Projects</p></section></div>  
