--- a/Frame/Layout/2_Intro/BFASH/fashcodeintro.html
+++ b/Frame/Layout/2_Intro/BFASH/fashcodeintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="fashcodeI" class="section-heading">FashCode</h2>
-        <span class="icon9add icon9-link" style="font-size: 60px"></span>
-        <p class="text-light">Individual code projects for<br> tutorials, game, site, bots, and other sublime things.</p></section></div>  
+        <span class="icon9add icon9-link" style="font-size: 60px">&nbsp;</span>
+        <p class="text-light">Codeing Projects</p></section></div>  
