--- a/Frame/Layout/2_Intro/arcadeintro.html
+++ b/Frame/Layout/2_Intro/arcadeintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="arcadei" class="section-heading">Arcade of Games</h2>
-        <span class="icon9add icon9-controllersnes" style="font-size: 60px"></span>
+        <span class="icon9add icon9-controllersnes" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Timeless Forgottens for Frens.</p></section></div>
