--- a/Frame/Layout/3_Content/cBooks/bookmob.html
+++ b/Frame/Layout/3_Content/cBooks/bookmob.html
@@ -4,19 +4,19 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title tc">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#book">Learn This</a></h3></div></div>
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Learn This</a></h3></div></div>
         <!--Terms Alert-->
         <section aria-label="BookAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
-                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&nbsp;</span><span class="sr-only">Close</span></button>
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <p>Support Pro-White authors and READ THEIR WORK.</p><p>Wisdom is priceless.</p></div></section>
     <!--Open-->
-            <div id="bookz" class="panel-collapse collapsed">
-            <!--Main-->
-                <div class="content panel-body">
-                    <div class="content-inner">
-                        <section aria-label="BookArray" class="cat-main-box">
-                            <section class="comment-content"></section>
+        <div id="bookz" class="panel-collapse collapsed">
+        <!--Main-->
+            <div class="content panel-body">
+                <div class="content-inner">
+                    <section aria-label="BookArray" class="cat-main-box">
+                        <section class="comment-content"></section>
     <!--Contain-->
             <div class="container-fluid tc">
     <!--Books-->
