--- a/Frame/Layout/3_Content/greyingmob.html
+++ b/Frame/Layout/3_Content/greyingmob.html
@@ -158,7 +158,7 @@
                     <section class="col-MainX col-lg-MainL col-MainM col-sm-MainS">
         <!--Folder Preview -->
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 ">
-                            <h1 class="img-responsive center-block TechFolder swt-TechSLFolder tc"></h1>
+                            <h1 class="img-responsive center-block TechFolder swt-TechSLTFolder tc"></h1>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 ">
                             <h1 class="img-responsive center-block TechFolder swt-TechADOFolder tc"></h1>
