--- a/Frame/Layout/3_Content/videomob.html
+++ b/Frame/Layout/3_Content/videomob.html
@@ -1,34 +1,33 @@
 <section aria-label="VidTop" class="panel-body">
     <div class="panel panel-default">
     <!--Menu Jump --> 
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title tc">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Video Array</a></h3></div></div>
-        <!--Terms Alert -->
-            <section aria-label="BookAlert" id="softwarealert">
-                <div class="alert alert-warning alert-dismissible tc" role="alert">
-                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true"></span><span class="sr-only">Close</span></button>
-                        <p>Support Pro-White Creators SHARE THEIR WORK.</p><p>Shareing truth has never been easier.</p></div>
-                    </section>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title tc">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Video Array</a></h3></div></div>
+    <!--Terms Alert -->
+        <section aria-label="BookAlert" id="softwarealert">
+            <div class="alert alert-warning alert-dismissible tc" role="alert">
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <p>Support Pro-White Creators SHARE THEIR WORK.</p><p>Shareing truth has never been easier.</p></div>
+                </section>
     <!--Open -->
-            <div id="vidz" class="panel-collapse collapsed">
-            <!--Main-->
-                <div class="content panel-body">
-                    <div class="content-inner">
-                        <section aria-label="VidArray" class="cat-main-box">
-                            <section class="comment-content"></section>
+        <div id="vidz" class="panel-collapse collapsed">
+        <!--Main-->
+            <div class="content panel-body">
+                <div class="content-inner">
+                    <section aria-label="VidArray" class="cat-main-box">
+                        <section class="comment-content"></section>
     <!--Contain -->
-            <div class="container-fluid tc">
-    
-<!--PodCast -->        
-    <!--Main -->
-        <div class="content panel-body">
-            <div class="content-inner 9touch">
-                <section aria-label="PodArray" class="cat-main-box">
-                    <section class="comment-content"><h5 class="section-heading tc">Podcast Array</h5></section>
+                        <div class="container-fluid tc">
+    <!--PodCast -->        
+        <!--Main -->
+                            <div class="content panel-body">
+                                <div class="content-inner 9touch">
+                                    <section aria-label="PodArray" class="cat-main-box">
+                                        <section class="comment-content"><h5 class="section-heading tc">Podcast Array</h5></section>
     <!--Contain -->
-                <div class="container-fluid tc">
+                                        <div class="container-fluid tc">
     <!--Featured -->
                 <section aria-label="Christos" class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <div class="panel">
@@ -47,7 +46,7 @@
                             <h2>&nbsp;</h2>
                             <span class="img-responsive center-block videom vm-WhiteTube">&nbsp;</span><br>
                             <div class="btn-1 center-block">
-                                <a href="https://odysee.com/@Mr_White_Tuber:4" target="popup"><span>Odysee</span></a>
+                                <a href="https://odysee.com/@Mr_White_Tuber:4" target="popup"><span>Odysee</span></a><br>
                                 <a style="center" target="popup" onclick="window.open('https://shing.tv/channel/mr-white-tuber','popup','width=600,height=600'); return false;"><span>Shing</span></a></div>
                         </div></div></section>
                     </div></section></div></div>
