--- a/Frame/Layout/2_Intro/BLNST/raceintro.html
+++ b/Frame/Layout/2_Intro/BLNST/raceintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro"> 
         <h2 id="raclnsti" class="section-heading">Link NatSoc Theory : Race</h2>
-        <span class="icon9add icon9-zelda" style="font-size: 60px"></span>
+        <span class="icon9add icon9-zelda" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Race is real. Race matters. Race is everything!<br> This is going to be a gas together with indisputable proof.</p></section></div>
