--- a/Frame/Layout/2_Intro/BLNST/religionintro.html
+++ b/Frame/Layout/2_Intro/BLNST/religionintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro"> 
         <h2 id="relilnsti" class="section-heading">Link NatSoc Theory : Religion</h2>
-        <span class="icon9add icon9-zelda" style="font-size: 60px"></span>
+        <span class="icon9add icon9-zelda" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Did Zelda leave out anything? No! It is one of the greatest interactive retellings of history ever!</p></section></div>
