--- a/Frame/Layout/2_Intro/BTech/hardwareintro.html
+++ b/Frame/Layout/2_Intro/BTech/hardwareintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="Tsoftwarei" class="section-heading">Hardware Fallacies</h2>
-        <span class="icon9add icon9-paperclip" style="font-size: 60px"></span>
+        <span class="icon9add icon9-paperclip" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">All the things required to avoid con artists selling snake oil.</p></section></div>
