--- a/Frame/Layout/2_Intro/BTech/softwareintro.html
+++ b/Frame/Layout/2_Intro/BTech/softwareintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
         <h2 id="Tsoftwarei" class="section-heading">Suggested Software</h2>
-        <span class="icon9add icon9-paperclip" style="font-size: 60px"></span>
+        <span class="icon9add icon9-paperclip" style="font-size: 60px">&nbsp;</span>
         <p class="text-light">Everything one will need to ditch Win10 subscription.</p></section></div>
