--- a/Frame/Layout/3_Content/homemobdes.html
+++ b/Frame/Layout/3_Content/homemobdes.html
@@ -6,30 +6,30 @@
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <span class="img-responsive img-circle center-block shopm sm-Pete">&nbsp;</span></div>
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
-                    <h2 id="home-MD" class="section-header">Online-Client</h2>
+                    <h2 id="home-MD">Online-Client</h2>
                     <p class="lead text-muted">You have the option to play online or download the PC client (exclusive). The client will enable you to enjoy 9-Neins from your desktop, higher resolution, and various other client bonuses.</p>
                     <p class="tc">
                     <section aria-label="OnlinePlay" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                         <div class="panel">
                             <div class="panel-body">
-                                <div class="btn-1 center-block">
+                                <div class="btn-1 center-block tc">
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Online</span></a></div> 
                             </div></div></section>
                     <section aria-label="ClientPlay" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                         <div class="panel">
                             <div class="panel-body">
-                                <div class="btn-1 center-block">
+                                <div class="btn-1 center-block tc">
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Win7+</span></a></div> 
                             </div></div></section>
                     <section aria-label="MobilePlay" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                         <div class="panel">
                             <div class="panel-body">
-                                <div class="btn-1 center-block">
+                                <div class="btn-1 center-block tc">
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Droid</span></a></div> 
                             </div></div></section>
                     <p class="lead text-muted tc">Microclient will be compatible<wbr> with WIN-7+.</p> 
                         <div class="panel-heading">
-                            <div class="btn-1 center-block">
+                            <div class="btn-1 center-block tc">
                                 <h3 class="panel-title tc">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#MobileInfo"><span>Systems - More</span></a></h3></div></div>
                         <div id="MobileInfo" class="panel-collapse collapse">
@@ -46,39 +46,39 @@
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
                     <h2 id="shop-md" class="section-header">Fash Out</h2>
-                    <p class="lead text-light">Shop for gear, items, clothing, and upgrades from 9-Neins, show love, and help our development flourish.</p>
+                    <p class="lead text-light">Shop for gear, items, clothing, and upgrades from 9-Neins, show love, and help our development flourish while raising your Power-Level.</p>
                     <p class="tc">
                     <section aria-label="Deals" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                         <div class="panel-blog">
                             <div class="panel-body-blog">
-                                <div class="btn-2 center-block">
+                                <div class="btn-2 center-block tc">
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>New</span></a></div> 
                             </div></div></section>
                     <section aria-label="PowerLevel" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                         <div class="panel-blog">
                             <div class="panel-body-blog">
-                                <div class="btn-2 center-block">
+                                <div class="btn-2 center-block tc">
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Swazis</span></a></div> 
                             </div></div></section>
                     <section aria-label="Merch" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                         <div class="panel-blog">
                             <div class="panel-body-blog">
-                                <div class="btn-2 center-block">
+                                <div class="btn-2 center-block tc">
                                     <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"><span>Merch</span></a></div> 
                             </div></div></section>
 
                     <p class="lead text-light tc">Crypto and Sponsors</p> 
-                        <div class="panel-heading">
-                            <div class="btn-2 center-block">
-                                <h3 class="panel-title tc">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#ShopInfo"><span>Shop - More</span></a></h3></div></div>
-                        <div id="ShopInfo" class="panel-collapse collapse">
-                            <div class="panel-body-blog">
-                                <div class="content-inner">
-                                <p class="lead text-light"><br><br>
-                                Raise your Power-Level.<br><br>
-                                Weekly deals, Power packs, and Merch. Go further and support our guys across the spectrum.</p> 
-                            </div></div></div></div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                    <div class="panel-heading">
+                        <div class="panel-body-blog btn-2 center-block tc">
+                            <h5 class="tc">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#ShopInfo"><span>Shop - More</span></a></h5></div></div>
+                    <div id="ShopInfo" class="panel-collapse collapse">
+                        <div class="panel-body-blog">
+                            <div class="content-inner">
+                            <p class="lead tc"><br><br>
+                            Raise your Power-Level.<br><br>
+                            Weekly deals, Power packs, and Merch. Go further and support our guys across the spectrum.</p> 
+                        </div></div></div></div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6"><br>
                     <span class="img-responsive img-circle center-block shopm sm-Shopd">&nbsp;</span></div>
                         </div></div></section></div>
