--- a/Frame/Layout/5_FeatSpon/mainspon.html
+++ b/Frame/Layout/5_FeatSpon/mainspon.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <p class="tc">Support us - Secure Mail - Secure Browser - Secure Vpn</p>
         <div class="promo">
-            <img class="promo-item center spon-Pro" target="popup" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0' , 'popup','width=600,height=600'); return false;">
-            <img class="promo-item center spon-Brave" target="popup" onclick="window.open('https://brave.com/download/' , 'popup','width=600,height=600'); return false;">
-            <img class="promo-item center spon-Vpn" target="popup" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0' , 'popup','width=600,height=600'); return false;"></div></div>
+            <img class="promoad-ad center spon-Pro" target="popup" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0' , 'popup','width=600,height=600'); return false;">
+            <img class="promoad-ad center spon-Brave" target="popup" onclick="window.open('https://brave.com/download/' , 'popup','width=600,height=600'); return false;">
+            <img class="promoad-ad center spon-Vpn" target="popup" onclick="window.open('https://pr.tn/ref/5972T1W4XRB0' , 'popup','width=600,height=600'); return false;"></div></div>
         </section>
