--- a/Frame/Layout/6_ReadMore/greyinfowrap.html
+++ b/Frame/Layout/6_ReadMore/greyinfowrap.html
@@ -1,2 +1,9 @@
-            <div class="panel-footy blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
-                <p class="section-heading text-muted">"A singularity is but the word of God<br><u> which renders everything to - simply and predictive. The formula of nature to obey or deaf.<wbr></u>"</p></div>
+<!--Page Contain -->
+    <div class="panel-body">
+        <section class="content" aria-label="homewrapp">
+            <div class="panel-footy panel-default tc">
+                
+                <div class="panel_row">
+                    <div class="blog-content col-MainX col-lg-MainL col-MainM col-sm-MainS">
+                        <p class="text-muted">"A singularity is but the word of God<br><u> which renders everything to - simply and predictive. The formula of nature to obey or deaf.<wbr></u>"</p></div></div>
+                    </div></section></div>
