--- a/Frame/Layout/3_Content/cBooks/Saints/saintmob.html
+++ b/Frame/Layout/3_Content/cBooks/Saints/saintmob.html
@@ -44,7 +44,7 @@
                         <div class="panel">
                             <div class="panel-body">
                                 <h2>John Earnest</h2>
-                                <span class="img-responsive  center-block saintm sm-Earnest">&nbsp;</span><br>
+                                <span class="img-responsive center-block saintm sm-Earnest">&nbsp;</span><br>
                                 <p>An Open Letter</p>
                                 <div class="btn-1 center-block">
                                     <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/JohnEarnestManifesto.pdf','popup'); return false;"><span>Read</span></a> 
@@ -54,13 +54,12 @@
                         <div class="panel">
                             <div class="panel-body">
                                 <h2>Anders Breivik</h2> 
-                                <span class="img-responsive  center-block saintm sm-Breivik">&nbsp;</span><br>
+                                <span class="img-responsive center-block saintm sm-Breivik">&nbsp;</span><br>
                                 <p>2083</p>
                                 <div class="btn-1 center-block">
                                     <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/AndersBehringBreivikManifesto.pdf','width=600,height=600'); return false;"><span>Read</span></a>
-                                <div class="btn-1 center-block">
                                     <a class="btn-readmore button" style="center" target="popup" onclick="window.open('../../Import/Downloads/Books/Manifesto/AndersBehringBreivikManifesto.pdf','width=600,height=600'); return false;"><span>DL</span></a></div>
-                            </div></div></div></section>
+                            </div></div></section>
                     <section class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                         <div class="panel">
                             <div class="panel-body">
