--- a/Frame/CSS/Core/NeinMainPro.css
+++ b/Frame/CSS/Core/NeinMainPro.css
@@ -418,6 +418,54 @@ dd {margin-left: 0;}
 .dropdown-submenu:hover > .shown{
     display: block;
 }
+/*DeskTop Scroll*/
+.ibwrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 100%);
+    overflow: hidden;
+    scroll-behavior: smooth;
+}
+.ibwrapper section {
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(5, auto);
+    margin: 0px 0;
+}
+.ibwrapper section .item {
+    height: 300px;
+    width: 200px;
+    padding: 0 2px;
+    transition: 500ms all;
+}
+.ibwrapper section .item:hover {
+    margin: 0 0px;
+    transform: scale(1.2);
+}
+.ibwrapper section a {
+    position: absolute;
+    color: #fff;
+    text-decoration: none;
+    font-size: 6em;
+    background: black;
+    width: 40px;
+    /*padding: 20px;*/
+    text-align: center;
+    z-index: 1;
+}
+.ibwrapper section a:nth-of-type(1) {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 25;
+    background: linear-gradient(-90deg, rgba(0, 0, 0, 0) 0%, black 100%);
+}
+.ibwrapper section a:nth-of-type(2) {
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, black 100%);
+}
 
 menu,
 summary {display: block;}
