Fash/NS Mobs Consolidated

--- a/Frame/Layout/3_Content/Movie/movmob.html
+++ b/Frame/Layout/3_Content/Movie/movmob.html
@@ -1,10 +1,19 @@
 <section aria-label="MovieTop" class="panel-body">
     <div class="panel panel-default">
-<!--Animated -->
-    <!--Menu Jump -->
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title tc">
+    <!--Saint Menu Jump -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title tc">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Movie Array</a></h3></div></div>
+    <!--Saint Terms Alert -->
+        <section aria-label="SaintAlert" id="softwarealert">
+            <div class="alert alert-warning alert-dismissible tc" role="alert">
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <p>Film impressions<br> influence worldviews.</p><br></div></section>
+    <!--Animated Menu Jump -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title tc">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#amoviez">Open Animated Films</a></h3></div></div>
     <!--Open -->
             <div id="amoviez" class="panel-collapse collapse">
