--- a/Frame/Layout/3_Content/Music/musicmob.html
+++ b/Frame/Layout/3_Content/Music/musicmob.html
@@ -1,10 +1,15 @@
 <section aria-label="MusicTop" class="panel-body">
     <div class="panel panel-default">
-    <!--Terms Alert -->
+    <!--Menu Music Menu -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title tc">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Audio Array</a></h3></div></div>        
+    <!--Music Terms Alert -->
         <section aria-label="MusicAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
-                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true"></span><span class="sr-only">Close</span></button>
-                    <p>Making Music is just as dangerous.</p><p>Support Pro-Whites Unafraid. #FREEBOND</p></div></section>
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <p>Making Music is just as dangerous.<br> Support Pro-Whites Unafraid. #FREEBOND</p><br></div></section>
 <!--Rap--> 
     <!--Rap Menu Jump -->
         <div class="panel panel-default">
@@ -274,3 +279,4 @@
                         </div></div></div></section>  
                     </div></section>
             </div></div></div>
+    </div></section>
