--- a/Frame/Layout/3_Content/arcademob.html
+++ b/Frame/Layout/3_Content/arcademob.html
@@ -1,16 +1,15 @@
 <section aria-label="ArcadeTop" class="panel-body">
-    <div class="panel-nat panel-default">
+    <div class="panel panel-default">
     <!--Arcade Menu Jump -->
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title tc">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Arcade Array</a></h3></div></div>
-        <!--Arcade Terms Alert -->
+    <!--Arcade Terms Alert -->
         <section aria-label="ArcadeAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <p>Support Pro-White Developments.<br>If you want Pro-White Alternatives.</p></div></section>
-
+                    <p>Support Pro-White Developments.<br>If you want Pro-White Alternatives.</p><br></div></section>
     <!--Open/Close Arcade -->
         <div id="arcadez" class="panel-collapse collapsed">
         <!--Main -->
