--- a/Frame/Layout/3_Content/cBooks/Saints/saintmob.html
+++ b/Frame/Layout/3_Content/cBooks/Saints/saintmob.html
@@ -1,16 +1,15 @@
 <section aria-label="SaintTop" class="panel-body">
     <div class="panel panel-default">
-    <!--Menu Jump -->
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title tc">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#saintz">Close Saint Mobile</a></h3></div></div>
-        <!--Terms Alert -->
-            <section aria-label="SaintAlert" id="softwarealert">
-                <div class="alert alert-warning alert-dismissible tc" role="alert">
-                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true"></span><span class="sr-only">Close</span></button>
-                        <p>Words Echo.<br>
-                        A simple letter makes a world of difference.</p><br></div></section>
+    <!--Saint Menu Jump -->
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title tc">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Saint Array</a></h3></div></div>
+    <!--Saint Terms Alert -->
+        <section aria-label="SaintAlert" id="softwarealert">
+            <div class="alert alert-warning alert-dismissible tc" role="alert">
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <p>Words Echo.<br> A simple letter makes a world of difference.</p><br></div></section>
     <!--Open -->
             <div id="saintz" class="panel-collapse collapsed">
             <!--Main -->
