--- a/Frame/Layout/3_Content/cBooks/bookmob.html
+++ b/Frame/Layout/3_Content/cBooks/bookmob.html
@@ -5,11 +5,11 @@
             <div class="panel-heading">
                 <h3 class="panel-title tc">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Learn This</a></h3></div></div>
-        <!--Terms Alert-->
+    <!--Books Terms Alert-->
         <section aria-label="BookAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <p>Support Pro-White authors and READ THEIR WORK.</p><p>Wisdom is priceless.</p></div></section>
+                    <p>Support Pro-White authors and READ THEIR WORK.<br> Wisdom is priceless.</p><br></div></section>
     <!--Open-->
         <div id="bookz" class="panel-collapse collapsed">
         <!--Main-->
