--- a/Frame/Layout/3_Content/videomob.html
+++ b/Frame/Layout/3_Content/videomob.html
@@ -1,16 +1,15 @@
 <section aria-label="VidTop" class="panel-body">
     <div class="panel panel-default">
-    <!--Menu Jump --> 
+    <!--Video Menu Jump --> 
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title tc">
                     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">Video Array</a></h3></div></div>
-    <!--Terms Alert -->
+    <!--Video Terms Alert -->
         <section aria-label="BookAlert" id="softwarealert">
             <div class="alert alert-warning alert-dismissible tc" role="alert">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <p>Support Pro-White Creators SHARE THEIR WORK.</p><p>Shareing truth has never been easier.</p></div>
-                </section>
+                    <p>Support Pro-White Creators SHARE THEIR WORK.<br> Shareing truth has never been easier.</p><br></div></section>
     <!--Open -->
         <div id="vidz" class="panel-collapse collapsed">
         <!--Main-->
