--- a/Frame/CSS/Core/NeinMainPro.css
+++ b/Frame/CSS/Core/NeinMainPro.css
@@ -200,7 +200,7 @@ span {
   /* z-index coz when we put bg to before and after this span text will not be visible */
   z-index: 3;
 }
-hgroup {margin-bottom: 25px; scroll-margin-top: 6rem;} 
+hgroup {scroll-margin-top: 6rem;} 
 /*Text*/
 h1,h2,h4,h5,h6,
 .h1,.h2,.h4,.h5,.h6 {
@@ -270,7 +270,7 @@ strong {font-weight: bold;
     font-size: 20px;
     font-weight: 400;
     line-height: 1.5;
-    padding: 8px 40px 8px;
+    padding: 0 40px 0;
 }
 .comment-right-content {padding-left: 400px; padding-right: 40px;}
 .comment-left-content {padding-left: 40px; padding-right: 400px;}
@@ -331,7 +331,9 @@ strong {font-weight: bold;
 .page-footer .contact .glyphicon {font-size: 32px; font-weight: 700;}
 .page-footer .small-print {padding: 0px 0 0px;font-weight: 300;}
 
-
+.row {
+    margin-top: 10px;
+}
 .content-2 {
     color: #fff;
     background-color: #222;
@@ -1017,55 +1019,54 @@ select[multiple].input-lg {
 
 @media (min-width: 768px) {
     
-      .form-inline .form-group {
+    .form-inline .form-group {
         display: inline-block;
         margin-bottom: 0;
         vertical-align: middle;
-      }
-      .form-inline .form-control {
+    }
+    .form-inline .form-control {
         display: inline-block;
         vertical-align: middle;
         width: auto;
-      }
-      .form-inline .form-control-static {
+    }
+    .form-inline .form-control-static {
         display: inline-block;
-      }
-      .form-inline .input-group {
+    }
+    .form-inline .input-group {
         display: inline-table;
         vertical-align: middle;
-      }
-      .form-inline .input-group .input-group-addon,
-      .form-inline .input-group .input-group-btn,
-      .form-inline .input-group .form-control {
+    }
+    .form-inline .input-group .input-group-addon,
+    .form-inline .input-group .input-group-btn,
+    .form-inline .input-group .form-control {
         width: auto;
-      }
-      .form-inline .input-group > .form-control {
+    }
+    .form-inline .input-group > .form-control {
         width: 100%;
-      }
-      .form-inline .control-label {
+    }
+    .form-inline .control-label {
         margin-bottom: 0;
         vertical-align: middle;
-      }
-      .form-inline .radio,
-      .form-inline .checkbox {
+    }
+    .form-inline .radio,
+    .form-inline .checkbox {
         display: inline-block;
         margin-bottom: 0;
         margin-top: 0;
         vertical-align: middle;
-      }
-      .form-inline .radio label,
-      .form-inline .checkbox label {
+    }
+    .form-inline .radio label,
+    .form-inline .checkbox label {
         padding-left: 0;
-      }
-      .form-inline .radio input[type="radio"],
-      .form-inline .checkbox input[type="checkbox"] {
+    }
+    .form-inline .radio input[type="radio"],
+    .form-inline .checkbox input[type="checkbox"] {
         margin-left: 0;
         position: relative;
-      }
-      .form-inline .has-feedback .form-control-feedback {
+    }
+    .form-inline .has-feedback .form-control-feedback {
         top: 0;
-      }
-
+    }
     .form-horizontal .control-label {
         margin-bottom: 0;
         padding-top: 7px;
@@ -1082,29 +1083,27 @@ select[multiple].input-lg {
 }
 
 button {overflow:visible}
-
-/*Button*/
 .btn {
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 300px;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.42857143;
-  margin-bottom: 0;
-  padding: 7px 12px;
-  text-align: center;
-  text-transform: uppercase;
-  -ms-touch-action: manipulation;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 300px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.42857143;
+    margin-bottom: 0;
+    padding: 7px 12px;
+    text-align: center;
+    text-transform: uppercase;
+    -ms-touch-action: manipulation;
       touch-action: manipulation;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+    vertical-align: middle;
+    white-space: nowrap;
 }
 .btn:focus,
 .btn:active:focus,
@@ -1112,57 +1111,57 @@ button {overflow:visible}
 .btn.focus,
 .btn:active.focus,
 .btn.active.focus {
-  outline: 5px auto -webkit-focus-ring-color;
-  outline-offset: -2px;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
 }
 .btn:hover,
 .btn:focus,
 .btn.focus {
-  color: #333;
-  text-decoration: none;
+    color: #333;
+    text-decoration: none;
 }
 .btn:active,
 .btn.active {
-  background-image: none;
-  outline: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    background-image: none;
+    outline: 0;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+       /   box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
 }
 .btn.disabled,
 .btn[disabled],
 fieldset[disabled] .btn {
-  -webkit-box-shadow: none;
+    -webkit-box-shadow: none;
           box-shadow: none;
-  cursor: not-allowed;
-  filter: alpha(opacity=65);
-  opacity: .65;
+    cursor: not-allowed;
+    filter: alpha(opacity=65);
+    opacity: .65;
 }
 a.btn.disabled,
 fieldset[disabled] a.btn {
-  pointer-events: none;
+    pointer-events: none;
 }
 .btn-default {
-  background-color: #fff;
-  border-color: #ccc;
-  color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+    color: #333;
 }
 .btn-default:focus,
 .btn-default.focus {
-  background-color: #e6e6e6;
-  border-color: #8c8c8c;
-  color: #333;
+    background-color: #e6e6e6;
+    border-color: #8c8c8c;
+    color: #333;
 }
 .btn-default:hover {
-  background-color: #e6e6e6;
-  border-color: #adadad;
-  color: #333;
+    background-color: #e6e6e6;
+    border-color: #adadad;
+    color: #333;
 }
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  background-color: #777777;
-  border-color: #eee;
-  color: #222;
+    background-color: #777777;
+    border-color: #eee;
+    color: #222;
 }
 .btn-default:active:hover,
 .btn-default.active:hover,
@@ -1173,15 +1172,16 @@ fieldset[disabled] a.btn {
 .btn-default:active.focus,
 .btn-default.active.focus,
 .open > .dropdown-toggle.btn-default.focus {
-  background-color: #d4d4d4;
-  border-color: #8c8c8c;
-  color: #333;
+    background-color: #d4d4d4;
+    border-color: #8c8c8c;
+    color: #333;
 }
 .btn-default:active,
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-default.disabled:hover,
 .btn-default[disabled]:hover,
 fieldset[disabled] .btn-default:hover,
@@ -1191,39 +1191,45 @@ fieldset[disabled] .btn-default:focus,
 .btn-default.disabled.focus,
 .btn-default[disabled].focus,
 fieldset[disabled] .btn-default.focus {
-  background-color: #fff;
-  border-color: #fff;
+    background-color: #fff;
+    border-col
+    -+*or #fff;
 }
 .btn-default .badge {
-  background-color: #222;
-  color: #fff;
+    background-color: #222;
+    color: #fff;
 }
+
 .btn-primary {
-  background-color: #999999;
-  border-color: black;
-  color: #fff;
-  -webkit-transition: all .35s;
+    background-color: #999999;
+    border-color: black;
+    color: #fff;
+    -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
 }
+
 .btn-primary:focus,
 .btn-primary.focus {
-  background-color: #286090;
-  border-color: #122b40;
-  color: #fff;
+    background-color: #286090;
+    border-color: #122b40;
+    color: #fff;
 }
+
 .btn-primary:hover {
-  background-color: #286090;
-  border-color: #204d74;
-  color: #fff;
+    background-color: #286090;
+    border-color: #204d74;
+    color: #fff;
 }
+
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  background-color: lightblue;
-  border-color: #333;
-  color: #fff;
+    background-color: lightblue;
+    border-color: #333;
+    color: #fff;
 }
+
 .btn-primary:active:hover,
 .btn-primary.active:hover,
 .open > .dropdown-toggle.btn-primary:hover,
@@ -1233,15 +1239,17 @@ fieldset[disabled] .btn-default.focus {
 .btn-primary:active.focus,
 .btn-primary.active.focus,
 .open > .dropdown-toggle.btn-primary.focus {
-  background-color: #999999;
-  border-color: #122b40;
-  color: #fff;
+    background-color: #999999;
+    border-color: #122b40;
+    color: #fff;
 }
+
 .btn-primary:active,
 .btn-primary.active,
 .open > .dropdown-toggle.btn-primary {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-primary.disabled:hover,
 .btn-primary[disabled]:hover,
 fieldset[disabled] .btn-primary:hover,
@@ -1251,36 +1259,42 @@ fieldset[disabled] .btn-primary:focus,
 .btn-primary.disabled.focus,
 .btn-primary[disabled].focus,
 fieldset[disabled] .btn-primary.focus {
-  background-color: white;
-  border-color: black;
+    background-color: white;
+    border-color: black;
 }
+
 .btn-primary .badge {
-  background-color: #fff;
-  color: darkgrey;
+    background-color: #fff;
+    color: darkgrey;
 }
+
 .btn-success {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
-  color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+    color: #fff;
 }
+
 .btn-success:focus,
 .btn-success.focus {
-  background-color: #449d44;
-  border-color: #255625;
-  color: #fff;
+    background-color: #449d44;
+    border-color: #255625;
+    color: #fff;
 }
+
 .btn-success:hover {
-  background-color: #449d44;
-  border-color: #398439;
-  color: #fff;
+    background-color: #449d44;
+    border-color: #398439;
+    color: #fff;
 }
+
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
-  background-color: #449d44;
-  border-color: #398439;
-  color: #fff;
+    background-color: #449d44;
+    border-color: #398439;
+    color: #fff;
 }
+
 .btn-success:active:hover,
 .btn-success.active:hover,
 .open > .dropdown-toggle.btn-success:hover,
@@ -1290,15 +1304,17 @@ fieldset[disabled] .btn-primary.focus {
 .btn-success:active.focus,
 .btn-success.active.focus,
 .open > .dropdown-toggle.btn-success.focus {
-  background-color: #398439;
-  border-color: #255625;
-  color: #fff;
+    background-color: #398439;
+    border-color: #255625;
+    color: #fff;
 }
+
 .btn-success:active,
 .btn-success.active,
 .open > .dropdown-toggle.btn-success {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-success.disabled:hover,
 .btn-success[disabled]:hover,
 fieldset[disabled] .btn-success:hover,
@@ -1308,36 +1324,42 @@ fieldset[disabled] .btn-success:focus,
 .btn-success.disabled.focus,
 .btn-success[disabled].focus,
 fieldset[disabled] .btn-success.focus {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
 }
+
 .btn-success .badge {
-  background-color: #fff;
-  color: #5cb85c;
+    background-color: #fff;
+    color: #5cb85c;
 }
+
 .btn-info {
-  background-color: #5bc0de;
-  border-color: #46b8da;
-  color: #fff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+    color: #fff;
 }
+
 .btn-info:focus,
 .btn-info.focus {
-  background-color: #31b0d5;
-  border-color: #1b6d85;
-  color: #fff;
+    background-color: #31b0d5;
+    border-color: #1b6d85;
+    color: #fff;
 }
+
 .btn-info:hover {
-  background-color: #31b0d5;
-  border-color: #269abc;
-  color: #fff;
+    background-color: #31b0d5;
+    border-color: #269abc;
+    color: #fff;
 }
+
 .btn-info:active,
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
-  background-color: #31b0d5;
-  border-color: #269abc;
-  color: #fff;
+    background-color: #31b0d5;
+    border-color: #269abc;
+    color: #fff;
 }
+
 .btn-info:active:hover,
 .btn-info.active:hover,
 .open > .dropdown-toggle.btn-info:hover,
@@ -1347,15 +1369,17 @@ fieldset[disabled] .btn-success.focus {
 .btn-info:active.focus,
 .btn-info.active.focus,
 .open > .dropdown-toggle.btn-info.focus {
-  background-color: #269abc;
-  border-color: #1b6d85;
-  color: #fff;
+    background-color: #269abc;
+    border-color: #1b6d85;
+    color: #fff;
 }
+
 .btn-info:active,
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
-  background-image: none;
+    background-image: none;
 }
+
 .btn-info.disabled:hover,
 .btn-info[disabled]:hover,
 fieldset[disabled] .btn-info:hover,
@@ -1365,35 +1389,35 @@ fieldset[disabled] .btn-info:focus,
 .btn-info.disabled.focus,
 .btn-info[disabled].focus,
 fieldset[disabled] .btn-info.focus {
-  background-color: #5bc0de;
-  border-color: #46b8da;
+    background-color: #5bc0de;
+    border-color: #46b8da;
 }
 .btn-info .badge {
-  background-color: #fff;
-  color: #5bc0de;
+    background-color: #fff;
+    color: #5bc0de;
 }
 .btn-warning {
-  background-color: #f0ad4e;
-  border-color: #eea236;
-  color: #fff;
+    background-color: #f0ad4e;
+    border-color: #eea236;
+    color: #fff;
 }
 .btn-warning:focus,
 .btn-warning.focus {
-  background-color: #ec971f;
-  border-color: #985f0d;
-  color: #fff;
+    background-color: #ec971f;
+    border-color: #985f0d;
+    color: #fff;
 }
 .btn-warning:hover {
-  background-color: #ec971f;
-  border-color: #d58512;
-  color: #fff;
+    background-color: #ec971f;
+    border-color: #d58512;
+    color: #fff;
 }
 .btn-warning:active,
 .btn-warning.active,
 .open > .dropdown-toggle.btn-warning {
-  background-color: #ec971f;
-  border-color: #d58512;
-  color: #fff;
+    background-color: #ec971f;
+    border-color: #d58512;
+    color: #fff;
 }
 .btn-warning:active:hover,
 .btn-warning.active:hover,
@@ -1404,14 +1428,14 @@ fieldset[disabled] .btn-info.focus {
 .btn-warning:active.focus,
 .btn-warning.active.focus,
 .open > .dropdown-toggle.btn-warning.focus {
-  background-color: #d58512;
-  border-color: #985f0d;
-  color: #fff;
+    background-color: #d58512;
+    border-color: #985f0d;
+    color: #fff;
 }
 .btn-warning:active,
 .btn-warning.active,
 .open > .dropdown-toggle.btn-warning {
-  background-image: none;
+    background-image: none;
 }
 .btn-warning.disabled:hover,
 .btn-warning[disabled]:hover,
@@ -1422,35 +1446,35 @@ fieldset[disabled] .btn-warning:focus,
 .btn-warning.disabled.focus,
 .btn-warning[disabled].focus,
 fieldset[disabled] .btn-warning.focus {
-  background-color: #f0ad4e;
-  border-color: #eea236;
+    background-color: #f0ad4e;
+    border-color: #eea236;
 }
 .btn-warning .badge {
-  background-color: #fff;
-  color: #f0ad4e;
+    background-color: #fff;
+    color: #f0ad4e;
 }
 .btn-danger {
-  background-color: #d9534f;
-  border-color: #d43f3a;
-  color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+    color: #fff;
 }
 .btn-danger:focus,
 .btn-danger.focus {
-  background-color: #c9302c;
-  border-color: #761c19;
-  color: #fff;
+    background-color: #c9302c;
+    border-color: #761c19;
+    color: #fff;
 }
 .btn-danger:hover {
-  background-color: #c9302c;
-  border-color: #ac2925;
-  color: #fff;
+    background-color: #c9302c;
+    border-color: #ac2925;
+    color: #fff;
 }
 .btn-danger:active,
 .btn-danger.active,
 .open > .dropdown-toggle.btn-danger {
-  background-color: #c9302c;
-  border-color: #ac2925;
-  color: #fff;
+    background-color: #c9302c;
+    border-color: #ac2925;
+    color: #fff;
 }
 .btn-danger:active:hover,
 .btn-danger.active:hover,
@@ -1461,14 +1485,14 @@ fieldset[disabled] .btn-warning.focus {
 .btn-danger:active.focus,
 .btn-danger.active.focus,
 .open > .dropdown-toggle.btn-danger.focus {
-  background-color: #ac2925;
-  border-color: #761c19;
-  color: #fff;
+    background-color: #ac2925;
+    border-color: #761c19;
+    color: #fff;
 }
 .btn-danger:active,
 .btn-danger.active,
 .open > .dropdown-toggle.btn-danger {
-  background-image: none;
+    background-image: none;
 }
 .btn-danger.disabled:hover,
 .btn-danger[disabled]:hover,
@@ -1479,92 +1503,90 @@ fieldset[disabled] .btn-danger:focus,
 .btn-danger.disabled.focus,
 .btn-danger[disabled].focus,
 fieldset[disabled] .btn-danger.focus {
-  background-color: #d9534f;
-  border-color: #d43f3a;
+    background-color: #d9534f;
+    border-color: #d43f3a;
 }
 .btn-danger .badge {
-  background-color: #fff;
-  color: #d9534f;
+    background-color: #fff;
+    color: #d9534f;
 }
 .btn-link {
-  border-radius: 0;
-  color: #337ab7;
-  font-weight: normal;
+    border-radius: 0;
+    color: #337ab7;
+    font-weight: normal;
 }
 .btn-link,
 .btn-link:active,
 .btn-link.active,
 .btn-link[disabled],
 fieldset[disabled] .btn-link {
-  background-color: transparent;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
 }
 .btn-link,
 .btn-link:hover,
 .btn-link:focus,
 .btn-link:active {
-  border-color: transparent;
+    border-color: transparent;
 }
 .btn-link:hover,
 .btn-link:focus {
-  background-color: transparent;
-  color: #23527c;
-  text-decoration: underline;
+    background-color: transparent;
+    color: #23527c;
+    text-decoration: underline;
 }
 .btn-link[disabled]:hover,
 fieldset[disabled] .btn-link:hover,
 .btn-link[disabled]:focus,
 fieldset[disabled] .btn-link:focus {
-  color: #777;
-  text-decoration: none;
+    color: #777;
+    text-decoration: none;
 }
-
 .btn-lg {
     padding: 15px 30px;
 }
-
 .btn-lg,
 .btn-group-lg > .btn {
-  border-radius: 6px;
-  font-size: 18px;
-  line-height: 1.3333333;
-  padding: 10px 16px;
+    border-radius: 6px;
+    font-size: 18px;
+    line-height: 1.3333333;
+    padding: 10px 16px;
 }
 .btn-sm,
 .btn-group-sm > .btn {
-  border-radius: 3px;
-  font-size: 12px;
-  line-height: 1.5;
-  padding: 5px 10px;
+    border-radius: 3px;
+    font-size: 12px;
+    line-height: 1.5;
+    padding: 5px 10px;
 }
 .btn-xs,
 .btn-group-xs > .btn {
-  border-radius: 3px;
-  font-size: 12px;
-  line-height: 1.5;
-  padding: 1px 5px;
+    border-radius: 3px;
+    font-size: 12px;
+    line-height: 1.5;
+    padding: 1px 5px;
 }
 .btn-block {
-  display: block;
-  width: 100%;
+    display: block;
+    width: 100%;
 }
 .btn-block + .btn-block {
-  margin-top: 5px;
+    margin-top: 5px;
 }
 input[type="submit"].btn-block,
 input[type="reset"].btn-block,
 input[type="button"].btn-block {
-  width: 100%;
+    width: 100%;
 }
 .fade {
-  opacity: 0;
-  -webkit-transition: opacity .15s linear;
-       -o-transition: opacity .15s linear;
-          transition: opacity .15s linear;
+    opacity: 0;
+    -webkit-transition: opacity .15s linear;
+    -o-transition: opacity .15s linear;
+    transition: opacity .15s linear;
 }
 .fade.in {
-  opacity: 1;
+    opacity: 1;
 }
 
 /*DropDowns*/
