--- a/Frame/CSS/Core/NeinMainPro.css
+++ b/Frame/CSS/Core/NeinMainPro.css
@@ -341,7 +341,7 @@ strong {font-weight: bold;
 /*.Info-Sec {padding: 20px 0 40px;}*/
 .content-25pd {
     padding: 10px 0;
-    background-color: #DBE0E3;
+    background-color: #f4f9fd;
 }
 
 /*Sidebar*/
@@ -3455,7 +3455,7 @@ td,
 .dltab th  {
     color: #999999; font-size: 1em; font-weight: bold; text-align: left;}
 
-.dltab .blueOn {width:100%; color:#5b5b5b; background-color:#999999;}
+.dltab .blueOn {color:#5b5b5b; background-color:#999999;}
 .dltab .yelloOn {color: #F6C90E; text-decoration: none;}
 .dltab .greenOn {color: #00d178; text-decoration: none;}
 
@@ -3477,6 +3477,7 @@ td,
   background-color: #33414c;
   color: #F6C90E;
   box-shadow: #999999 -1px 1px, #999999 -2px 2px, #999999 -3px 3px, #999999 -4px 4px, #999999 -5px 5px, #999999 -6px 6px;
+  cursor: pointer;
   transform: translate3d(6px, -6px, 0);
   transition-delay: 0s;
     transition-duration: 0.4s;
@@ -3754,6 +3755,9 @@ code {
     font-size: 98%;
     padding: 2px 4px;
 }
+code:hover {
+    font-size: 150%;
+}
 kbd {
   background-color: #333;
   border-radius: 3px;
@@ -3844,7 +3848,208 @@ pre code {
   white-space: pre-wrap;
 }
 
-
+/*Emmet CSS*/
+    .emmetbody {
+        background: #2c2d32;
+        color: #777;
+        padding: 0!important;
+    }
+    .wrapper {
+        width: auto;
+        max-width: none;
+    }
+    .page-content {
+        margin-left: 0;
+        padding: 30px;
+        border: 0;
+    }
+    .ch-snippet {
+        font-family: Monaco, Bitstream Vera Sans Mono, "Lucida Console", Terminal;
+        margin-bottom: 10px;
+        font-size: 12px;
+        -webkit-column-break-inside: avoid;
+        column-break-inside: avoid;
+    }
+    .ch-snippet__name {
+        font-size: 1em;
+        font-weight: 400;
+        float: left;
+        padding: 0;
+        margin: 0 15px 0 0;
+        min-width: 12em;
+        color: #fff;
+    }
+    .ch-snippet__value {
+        white-space: normal;
+        overflow: wrap;
+        margin: 0;
+        padding: 1px 0 1px 20px;
+        color: #777;
+        font-siaze: 11px;
+    }
+    .ch-tabstop {
+        background: blue;
+        display: inline-block;
+        padding: 0 5px;
+        color: #fff;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, .5);
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 4px;
+    }
+    .ch-caret {
+        border-left: 2px solid #578fe3;
+        margin: 0 2px -.1em;
+        display: inline-block;
+        height: 1.1em;
+    }
+    .ch-section {
+        margin-bottom: 40px;
+        clear: both;
+    }
+    .ch-section:last-of-type {
+        margin-bottom: 0;
+    }
+    .ch-section__desc p {
+        margin-bottom: .4em;
+    }
+    .ch-section__desc code {
+        color: #999999;
+    }
+    .ch-section__content {
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
+        -webkit-column-gap: 30px;
+        -moz-column-gap: 30px;
+        column-gap: 30px;
+    }
+    .ch-section__title {
+        margin: 0 0 .5em;
+        page-break-after: avoid;
+        color: #999999;
+    }
+    .ch-subsection {
+        clear: both;
+        -webkit-column-break-inside: avoid;
+        -moz-column-break-inside: avoid;
+        -ms-column-break-inside: avoid;
+        -o-column-break-inside: avoid;
+        column-break-inside: avoid;
+    }
+    .ch-subsection__title {
+        margin: 20px 0 5px;
+        page-break-after: avoid;
+        background-color: #1b1c20;
+        color: #ededed;
+        padding: 5px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        border-radius: 3px;
+    }
+    .ch-subsection:first-child .ch-subsection__title {
+        margin-top: 0;
+    }
+    .cn-snippet__alias {
+        font-size: 9px;
+        color: #4c4d51;
+        margin: 5px 0;
+    }
+    .cn-snippet__alias-abbr {
+        color: #606064;
+    }
+    .ch-section_html .ch-snippet__name, .ch-section_syntax .ch-snippet__name, .ch-section_xsl .ch-snippet__name {
+        float: none;
+    }
+    .ch-section_html .ch-snippet, .ch-section_syntax .ch-snippet, .ch-section_xsl .ch-snippet {
+        margin-bottom: 20px;
+    }
+    .ch-section_css .ch-snippet__name {
+        min-width: 7em;
+    }
+    @media print, screen and (max-width:870px) {
+        .ch-section__content {
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+    .page-content {
+        padding: 10px;
+    }
+    .download-a5 {
+        margin-top: -45px;
+    }
+    }@media print, screen and (max-width:770px) {
+        .download-a5__text {
+        display: none;
+    }
+    }@media print, screen and (max-width:500px) {
+        .ch-section__content {
+        -webkit-column-count: 1;
+        -moz-column-count: 1;
+        column-count: 1;
+    }
+    .page-content {
+        padding: 5px;
+    }
+    }@media screen and (max-width:600px) {
+        #gptong-container {
+        display: none;
+    }
+    .page-header {
+        height: auto;
+    }
+    .site-title {
+        top: auto;
+    }
+    }@media print {
+        body {
+        font-family: arial, sans-serif;
+        color: #000;
+        background: #fff;
+    }
+    #cheatsheet {
+        font-size: 7px;
+    }
+    .page-content {
+        padding: 0;
+        margin: 0;
+        border: 0;
+    }
+    .ch-section__content {
+        -webkit-column-count: auto;
+        -moz-column-count: auto;
+        column-count: auto;
+    }
+    .ch-snippet {
+        float: left;
+        width: 30%;
+        padding-right: 3%;
+        page-break-inside: avoid;
+        font-size: inherit;
+        margin-bottom: 7px!important;
+    }
+    .ch-section__title, .ch-subsection__title {
+        background: 0 0;
+        color: #000;
+        padding: 0;
+    }
+    .ch-snippet__name {
+        color: #333;
+        font-size: inherit;
+    }
+    .ch-tabstop {
+        background: 0 0;
+        color: #8b6e6e;
+        text-shadow: none;
+        border: 1px solid #999;
+    }
+    @page {
+        size: landscape;
+        margin: 1cm;
+    }
+    }
+/*animation*/
 
 @-webkit-keyframes progress-bar-stripes {
   from {
