--- a/Frame/Layout/3_Content/BFASH/FashCode/setupfiles.html
+++ b/Frame/Layout/3_Content/BFASH/FashCode/setupfiles.html
@@ -37,7 +37,7 @@
                             <section aria-label="Rlhtmlmin" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                                 <div class="panel">
                                     <div class="panel-body">
-                                        <span class="img-responsive center-block AdobeB swt-romeohtmlH">&nbsp;</span>
+                                        <span class="img-responsive center-block FashSetupH swt-romeohtmlH">&nbsp;</span>
                                         <h2>HTMLMinify</h2>
                                         <p>Desk Alternative.</p>
                                         <div class="btn-1 center-block">
@@ -47,7 +47,7 @@
                             <section aria-label="Rlcolor" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                                 <div class="panel">
                                     <div class="panel-body">
-                                        <span class="img-responsive center-block AdobeB swt-romeocolorH">&nbsp;</span>
+                                        <span class="img-responsive center-block FashSetupH swt-romeocolorH">&nbsp;</span>
                                         <h2>ColorPicker</h2>
                                         <p>Time Saver</p>
                                         <div class="btn-1 center-block">
@@ -57,7 +57,7 @@
                             <section aria-label="Rlscriptmin" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                                 <div class="panel">
                                     <div class="panel-body">
-                                        <span class="img-responsive center-block AdobeB swt-romeoscriptH">&nbsp;</span>
+                                        <span class="img-responsive center-block FashSetupH swt-romeoscriptH">&nbsp;</span>
                                         <h2>ScriptM</h2>
                                         <p>Desk Alternative</p>
                                         <div class="btn-1 center-block">
