Final Correct FashBlog

--- a/Frame/CSS/ALL_Images.css
+++ b/Frame/CSS/ALL_Images.css
@@ -1099,7 +1099,7 @@
                 }
                 /*Graphic Setup*/
                 .swt-PremierefpH {
-                    background: url('./../../Images/Blog/Fash/Photo/Setup/premiereeffectproH');
+                    background: url('./../../Images/Blog/Fash/Photo/Setup/premiereeffectproH.png');
                 }
                 .swt-PhotoShoppH {
                     background: url('./../../Images/Blog/Fash/Photo/Setup/photoshopH.png');
