--- a/Frame/Layout/6_ReadMore/arcadeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/arcadeinfowrap.html
@@ -21,12 +21,12 @@
                     <section aria-label="GameCulture" class="comment-content">
                         <hgroup class="bible-content tc">
                             <h5>Arcade Play</h5></hgroup>
-                                <p>As of now there is no spare time to work on makeing these classic playable online and on Mobile devices, our Main Development takes precedent but these classics will in fact be playable through our Main Development(Optional add on package). Just not stand alone.<br><br>
+                                <p>As of now there is no spare time to work on makeing these classic playables online and on Mobile devices there are other avenues that can provide that, our Main Development takes precedent but these classics will in fact be playable through our Main Development. Just not stand alone.<br><br>
                                 These legacy games were a massive inspiration of the endless possibilties for NineNeins and are truly gems we did not want lost and buried in the interwebs.</p></section>
                     <section aria-label="GameInspiration" class="comment-content">
                         <hgroup class="bible-content tc">
                             <h5>Favorite Play</h5></hgroup>
-                                <p>Classic Favorite Games with Emulators to play them if desired. Like alot of things on NineNeins is a front end storage for my Computers. Makeing it a super interactive Blog/Site/App or whatever word you want to use for it.</p></section>
+                                <p>Classic Favorite Games with the required Emulators to play them if desired on PC. Like alot of things on NineNeins they are not posted here just to be posted here, but serves as a front end storage for our Computers. Makeing it a super interactive Blog/Site/App or whatever word you want to use for it. As well as a super conveient 1 stop shop for anyone looking and us.</p></section>
                         </div></div></div>
 <!--Quote -->
                     <div class="panel_row">
